# Interview_management_system_frappe

./: README.md  pyproject.toml
interview_management_system/: hooks.py
interview_management_system/interview_management_system/doctype/candidate_data/: candidate_data.js  candidate_data.json  candidate_data.py  test_candidate_data.py
interview_management_system/interview_management_system/doctype/interview_schedule/: interview_schedule.js  interview_schedule.json  interview_schedule.py  test_interview_schedule.py
interview_management_system/interview_management_system/doctype/interviewer/: interviewer.js  interviewer.json  interviewer.py  test_interviewer.py
interview_management_system/interview_management_system/web_form/interview_management_system/: interview_management_system.json
